dfir_rs/tests/compile-fail/stable/surface_loop_defer_tick.stderr
error: `batch` must have exactly 1 output(s), actually has 0.
 --> tests/compile-fail/stable/surface_loop_defer_tick.rs:3:31
  |
3 |         source_iter(0..10) -> batch();
  |                               ^^^^^

error: `batch` must have exactly 1 input(s), actually has 0.
 --> tests/compile-fail/stable/surface_loop_defer_tick.rs:5:13
  |
5 |             batch() -> defer_tick() -> null();
  |             ^^^^^

error: Operator `defer_tick(...)` is not allowed within a `loop { ... }` context. Use `defer_iteration()` or `defer_iteration_lazy()` instead.
 --> tests/compile-fail/stable/surface_loop_defer_tick.rs:5:24
  |
5 |             batch() -> defer_tick() -> null();
  |                        ^^^^^^^^^^

error: Windowing operator `batch(...)` must be the first input operator into a `loop { ... } context.
 --> tests/compile-fail/stable/surface_loop_defer_tick.rs:3:31
  |
3 |         source_iter(0..10) -> batch();
  |                               ^^^^^
